# _ide_helper_models.php
@@ -139,3 +139,30 @@ namespace App\Models{
  */
 	class Brand extends \Eloquent {}
 }
+
+namespace App\Models{
+/**
+ * 
+ *
+ * @property int $id
+ * @property string $uuid
+ * @property string $title
+ * @property string $content
+ * @property array|null $metadata
+ * @property \Illuminate\Support\Carbon|null $created_at
+ * @property \Illuminate\Support\Carbon|null $updated_at
+ * @method static \Database\Factories\PromotionFactory factory($count = null, $state = [])
+ * @method static \Illuminate\Database\Eloquent\Builder|Promotion newModelQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|Promotion newQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|Promotion query()
+ * @method static \Illuminate\Database\Eloquent\Builder|Promotion whereContent($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Promotion whereCreatedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Promotion whereId($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Promotion whereMetadata($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Promotion whereTitle($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Promotion whereUpdatedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Promotion whereUuid($value)
+ */
+	class Promotion extends \Eloquent {}
+}
+
