# storage/api-docs/api-docs.json
@@ -164,6 +164,56 @@
                     }
                 ]
             }
+        },
+        "/api/v1/promotions": {
+            "post": {
+                "tags": [
+                    "Promotion"
+                ],
+                "summary": "Display promotions list",
+                "operationId": "listPromotions",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "limit": {
+                                        "description": "Page limit",
+                                        "type": "string"
+                                    },
+                                    "page": {
+                                        "description": "Page number",
+                                        "type": "string"
+                                    },
+                                    "sortBy": {
+                                        "description": "Sort by",
+                                        "type": "string"
+                                    },
+                                    "sort": {
+                                        "description": "Sort type",
+                                        "type": "string"
+                                    },
+                                    "valid": {
+                                        "description": "Valid",
+                                        "type": "boolean"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful response"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
         }
     },
     "components": {
